--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,8 @@
 }
 body{
   overflow-x: hidden;
-  
 }
 .app{
-  
   max-width: 100%;
 }
 .home_container{
@@ -29,7 +27,6 @@ body{
   right: -170px;
   z-index: -2;
   max-width: 700px;
-
 }
 .order_btn{
   padding: 0.4rem 4rem;
@@ -89,6 +86,9 @@ body{
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: orange;
 }
+li{
+  list-style: none;
+}
 .play_btn{
   background-color: white;
   padding: 0.9rem 3rem;
@@ -106,17 +106,16 @@ body{
   list-style: none;
   font-size: 1.1rem;
 }
-.navbar{
- 
-
-  
-}
 .menu_list{
   left: 0;
   gap: 3rem;
 }
 .menu_list.open {
   display: flex;
+}
+.footer{
+  background-color: orange;
+
 }
 /* ---------------------services----------------------------- */
 
@@ -176,5 +175,8 @@ body{
  }
  .open{
   left: 0;
+ }
+ .image_section{
+  margin-top: 3rem;
  }
 }
