--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@ li{
   background-color: orange;
 
 }
+.subscribe{
+  width: 100%;
+  border-radius: 100px;
+  padding: 0.3rem 1.3rem;
+  border: none;
+}
+
 /* ---------------------services----------------------------- */
 
 /* ---------------small devices------------------------ */
